--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ add_definitions(
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -std=c++11 -Wfatal-errors -g")
 
-set(SOURCE_FILES main.cpp JIT.cpp JITMemoryManager.cpp CallGraph.cpp)
+set(SOURCE_FILES main.cpp JIT.cpp JITMemoryManager.cpp CallGraph.cpp Interactive.cpp)
 add_executable(surgeon ${SOURCE_FILES})
 
 set(LLVM_LIBS
